test/bad/wrong-type-return.go
package main
import "fmt"

func f() int {
  return "0"
}

func main() {
  fmt.Print(f())
}
